fin de la presentation des bases DU JS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 
 <h2>Header Level 2</h2>
 
-<ol>
+<form action="">
+    <label for="Commentaire">Commentaire</label>
+    <input type="text" id="Commentaire">
+    <button type="submit" >Ajouter</button>
+
+</form>
+
+<ol class="commentaires">
     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
     <li>Aliquam tincidunt mauris eu risus.</li>
 </ol>
